--- a/tests/cassettes/test_pickup_lowest_rate.yaml
+++ b/tests/cassettes/test_pickup_lowest_rate.yaml
@@ -27,70 +27,70 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2023-05-15T21:50:05Z", "is_return": false, "messages":
+      string: '{"created_at": "2023-05-16T22:21:05Z", "is_return": false, "messages":
         [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
         "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        "9400100104262210071077", "updated_at": "2023-05-15T21:50:05Z", "batch_id":
+        "9400100104262210420523", "updated_at": "2023-05-16T22:21:06Z", "batch_id":
         null, "batch_status": null, "batch_message": null, "customs_info": null, "from_address":
-        {"id": "adr_73a472ebf36a11eda12eac1f6bc72124", "object": "Address", "created_at":
-        "2023-05-15T21:50:05+00:00", "updated_at": "2023-05-15T21:50:05+00:00", "name":
+        {"id": "adr_f32f699af43711ed9d30ac1f6bc7b362", "object": "Address", "created_at":
+        "2023-05-16T22:21:05+00:00", "updated_at": "2023-05-16T22:21:05+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_6324f78a21d64ccc94831552ec5e4072",
-        "object": "Parcel", "created_at": "2023-05-15T21:50:05Z", "updated_at": "2023-05-15T21:50:05Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_1c0f1bc7f8704282bf473e5ee6866a05",
+        "object": "Parcel", "created_at": "2023-05-16T22:21:05Z", "updated_at": "2023-05-16T22:21:05Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_d258690a718044b98442855013c1c89d",
-        "created_at": "2023-05-15T21:50:05Z", "updated_at": "2023-05-15T21:50:05Z",
-        "date_advance": 0, "integrated_form": "none", "label_date": "2023-05-15T21:50:05Z",
+        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_9fb46ba11eba4326b270b943762bea56",
+        "created_at": "2023-05-16T22:21:06Z", "updated_at": "2023-05-16T22:21:06Z",
+        "date_advance": 0, "integrated_form": "none", "label_date": "2023-05-16T22:21:06Z",
         "label_resolution": 300, "label_size": "4x6", "label_type": "default", "label_file_type":
-        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20230515/0b102b1cebba4544ba1cdf24162c8e20.png",
+        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20230516/c0f7ec48c6d84e6ebcd667f2014584a3.png",
         "label_pdf_url": null, "label_zpl_url": null, "label_epl2_url": null, "label_file":
-        null}, "rates": [{"id": "rate_f524cfeb02fc453480efd150e054b37a", "object":
-        "Rate", "created_at": "2023-05-15T21:50:05Z", "updated_at": "2023-05-15T21:50:05Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
-        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
-        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_dc2a7731cc304e02ae4ed54d02e5a9d0", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_6d35f0f13203449eb3652857f9bc7c29",
-        "object": "Rate", "created_at": "2023-05-15T21:50:05Z", "updated_at": "2023-05-15T21:50:05Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
-        "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
-        "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_dc2a7731cc304e02ae4ed54d02e5a9d0", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_191792d66f98474d9fd9521c5b1975da",
-        "object": "Rate", "created_at": "2023-05-15T21:50:05Z", "updated_at": "2023-05-15T21:50:05Z",
+        null}, "rates": [{"id": "rate_30105ff3ff5c4168839245d483a56d74", "object":
+        "Rate", "created_at": "2023-05-16T22:21:06Z", "updated_at": "2023-05-16T22:21:06Z",
         "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
         "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
         "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_dc2a7731cc304e02ae4ed54d02e5a9d0", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_3738de1367a742918e344d3cc8e010d9",
-        "object": "Rate", "created_at": "2023-05-15T21:50:05Z", "updated_at": "2023-05-15T21:50:05Z",
+        5, "shipment_id": "shp_f5055ec96bc44acea01aa6cfe8b1c27b", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_159b0659d04c496ab3d9e40033f9315d",
+        "object": "Rate", "created_at": "2023-05-16T22:21:06Z", "updated_at": "2023-05-16T22:21:06Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
+        "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_f5055ec96bc44acea01aa6cfe8b1c27b", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_7510862d474f48f88bcebdb0500c9617",
+        "object": "Rate", "created_at": "2023-05-16T22:21:06Z", "updated_at": "2023-05-16T22:21:06Z",
         "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
         "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_dc2a7731cc304e02ae4ed54d02e5a9d0", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
-        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_3738de1367a742918e344d3cc8e010d9",
-        "object": "Rate", "created_at": "2023-05-15T21:50:05Z", "updated_at": "2023-05-15T21:50:05Z",
+        "shp_f5055ec96bc44acea01aa6cfe8b1c27b", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_d63c1bd8c4da4504ab9b8ad53c3c61e7", "object": "Rate", "created_at":
+        "2023-05-16T22:21:06Z", "updated_at": "2023-05-16T22:21:06Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "31.25", "currency": "USD",
+        "retail_rate": "35.80", "retail_currency": "USD", "list_rate": "31.25", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
+        "shp_f5055ec96bc44acea01aa6cfe8b1c27b", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_7510862d474f48f88bcebdb0500c9617",
+        "object": "Rate", "created_at": "2023-05-16T22:21:06Z", "updated_at": "2023-05-16T22:21:06Z",
         "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
         "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_dc2a7731cc304e02ae4ed54d02e5a9d0", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        "tracker": {"id": "trk_5c8967355e84413baf31ce273d01da8c", "object": "Tracker",
-        "mode": "test", "tracking_code": "9400100104262210071077", "status": "unknown",
-        "status_detail": "unknown", "created_at": "2023-05-15T21:50:05Z", "updated_at":
-        "2023-05-15T21:50:05Z", "signed_by": null, "weight": null, "est_delivery_date":
-        null, "shipment_id": "shp_dc2a7731cc304e02ae4ed54d02e5a9d0", "carrier": "USPS",
+        "shp_f5055ec96bc44acea01aa6cfe8b1c27b", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        "tracker": {"id": "trk_779bb9eeb4bd46d4b778b6da328161b9", "object": "Tracker",
+        "mode": "test", "tracking_code": "9400100104262210420523", "status": "unknown",
+        "status_detail": "unknown", "created_at": "2023-05-16T22:21:06Z", "updated_at":
+        "2023-05-16T22:21:06Z", "signed_by": null, "weight": null, "est_delivery_date":
+        null, "shipment_id": "shp_f5055ec96bc44acea01aa6cfe8b1c27b", "carrier": "USPS",
         "tracking_details": [], "fees": [], "carrier_detail": null, "public_url":
-        "https://track.easypost.com/djE6dHJrXzVjODk2NzM1NWU4NDQxM2JhZjMxY2UyNzNkMDFkYThj"},
-        "to_address": {"id": "adr_73a1af3cf36a11edb1b2ac1f6b0a0d1e", "object": "Address",
-        "created_at": "2023-05-15T21:50:05+00:00", "updated_at": "2023-05-15T21:50:05+00:00",
+        "https://track.easypost.com/djE6dHJrXzc3OWJiOWVlYjRiZDQ2ZDRiNzc4YjZkYTMyODE2MWI5"},
+        "to_address": {"id": "adr_f32c8e16f43711ed9d2fac1f6bc7b362", "object": "Address",
+        "created_at": "2023-05-16T22:21:05+00:00", "updated_at": "2023-05-16T22:21:06+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
         "street2": null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
@@ -98,15 +98,15 @@ interactions:
         null, "verifications": {"zip4": {"success": true, "errors": [], "details":
         null}, "delivery": {"success": true, "errors": [], "details": {"latitude":
         37.77551, "longitude": -122.39697, "time_zone": "America/Los_Angeles"}}}},
-        "usps_zone": 4, "return_address": {"id": "adr_73a472ebf36a11eda12eac1f6bc72124",
-        "object": "Address", "created_at": "2023-05-15T21:50:05+00:00", "updated_at":
-        "2023-05-15T21:50:05+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "usps_zone": 4, "return_address": {"id": "adr_f32f699af43711ed9d30ac1f6bc7b362",
+        "object": "Address", "created_at": "2023-05-16T22:21:05+00:00", "updated_at":
+        "2023-05-16T22:21:05+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
         "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_73a1af3cf36a11edb1b2ac1f6b0a0d1e", "object": "Address", "created_at":
-        "2023-05-15T21:50:05+00:00", "updated_at": "2023-05-15T21:50:05+00:00", "name":
+        "adr_f32c8e16f43711ed9d2fac1f6bc7b362", "object": "Address", "created_at":
+        "2023-05-16T22:21:05+00:00", "updated_at": "2023-05-16T22:21:06+00:00", "name":
         "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
         null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -116,7 +116,7 @@ interactions:
         "time_zone": "America/Los_Angeles"}}}}, "forms": [], "fees": [{"object": "Fee",
         "type": "LabelFee", "amount": "0.00000", "charged": true, "refunded": false},
         {"object": "Fee", "type": "PostageFee", "amount": "6.07000", "charged": true,
-        "refunded": false}], "id": "shp_dc2a7731cc304e02ae4ed54d02e5a9d0", "object":
+        "refunded": false}], "id": "shp_f5055ec96bc44acea01aa6cfe8b1c27b", "object":
         "Shipment"}'
     headers:
       cache-control:
@@ -126,11 +126,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"a20af5567545ac6e284ca2722c0e6910"
+      - W/"93c8f1ed5af1c9b38f109f144b733991"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_dc2a7731cc304e02ae4ed54d02e5a9d0
+      - /api/v2/shipments/shp_f5055ec96bc44acea01aa6cfe8b1c27b
       pragma:
       - no-cache
       referrer-policy:
@@ -146,20 +146,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3ecd17926462a90ce2b98c38000894b3
+      - de846e06646401d1e789651c0049adbe
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq a29e4ad05c
       - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '1.010610'
+      - '0.946503'
       x-version-label:
-      - easypost-202305152107-770224374c-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -170,7 +170,7 @@ interactions:
       St", "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
       "country": "US", "email": "test@example.com", "phone": "5555555555"}, "min_datetime":
       "2023-05-17", "max_datetime": "2023-05-17", "instructions": "Pickup at front
-      door", "shipment": {"id": "shp_dc2a7731cc304e02ae4ed54d02e5a9d0"}}}'
+      door", "shipment": {"id": "shp_f5055ec96bc44acea01aa6cfe8b1c27b"}}}'
     headers:
       Accept:
       - '*/*'
@@ -190,21 +190,21 @@ interactions:
     uri: https://api.easypost.com/v2/pickups
   response:
     body:
-      string: '{"id": "pickup_c7ab5738c30444868e61f0d3fef0ff95", "object": "Pickup",
-        "created_at": "2023-05-15T21:50:06Z", "updated_at": "2023-05-15T21:50:06Z",
+      string: '{"id": "pickup_53c300439dd54b05b9686bb944c16f61", "object": "Pickup",
+        "created_at": "2023-05-16T22:21:06Z", "updated_at": "2023-05-16T22:21:06Z",
         "mode": "test", "status": "unknown", "reference": null, "min_datetime": "2023-05-17T00:00:00Z",
         "max_datetime": "2023-05-17T00:00:00Z", "is_account_address": false, "instructions":
         "Pickup at front door", "messages": [], "confirmation": null, "address": {"id":
-        "adr_74406669f36a11edb3daac1f6b0a0d1e", "object": "Address", "created_at":
-        "2023-05-15T21:50:06+00:00", "updated_at": "2023-05-15T21:50:06+00:00", "name":
+        "adr_f3cccb21f43711edbbc4ac1f6b0a0d1e", "object": "Address", "created_at":
+        "2023-05-16T22:21:06+00:00", "updated_at": "2023-05-16T22:21:06+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
         {}}, "carrier_accounts": [], "pickup_rates": [{"mode": "test", "service":
-        "NextDay", "rate": "0.00", "currency": "USD", "created_at": "2023-05-15T21:50:06Z",
-        "updated_at": "2023-05-15T21:50:06Z", "carrier": "USPS", "pickup_id": "pickup_c7ab5738c30444868e61f0d3fef0ff95",
-        "id": "pickuprate_a1a991d35f9f4688a290e08548bb8755", "object": "PickupRate"}]}'
+        "NextDay", "rate": "0.00", "currency": "USD", "created_at": "2023-05-16T22:21:07Z",
+        "updated_at": "2023-05-16T22:21:07Z", "carrier": "USPS", "pickup_id": "pickup_53c300439dd54b05b9686bb944c16f61",
+        "id": "pickuprate_1f178014abab481eb444b4fb67b78cfd", "object": "PickupRate"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
@@ -213,7 +213,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"416fa739f0674da0b8fc959146fd1034"
+      - W/"c59b26599f8a56a2df366d7b37d967a8"
       expires:
       - '0'
       pragma:
@@ -231,7 +231,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3ecd17926462a90ee2b98c380008950b
+      - de846e06646401d2e789651c0049ae14
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -242,9 +242,9 @@ interactions:
       - intlb2nuq a29e4ad05c
       - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.646767'
+      - '1.181698'
       x-version-label:
-      - easypost-202305152107-770224374c-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
