--- a/tests/cassettes/test_authenticated_user_api_keys.yaml
+++ b/tests/cassettes/test_authenticated_user_api_keys.yaml
@@ -17,22 +17,22 @@ interactions:
   response:
     body:
       string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
-        null, "name": "EasyPost Python Client Library Tests", "phone_number": "<REDACTED>",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "default_carbon_offset":
-        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
-        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
-        "recharge_threshold": "0.00", "has_billing_method": false, "cc_fee_rate":
-        "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
-        "1.00", "email": "<REDACTED>", "children": []}'
+        null, "name": "New Name", "phone_number": "<REDACTED>", "verified": true,
+        "created_at": "2017-03-01T03:01:34Z", "default_carbon_offset": false, "has_elevate_access":
+        false, "balance": "0.00000", "price_per_shipment": "0.00000", "recharge_amount":
+        "100.00", "secondary_recharge_amount": "100.00", "recharge_threshold": "0.00",
+        "has_billing_method": false, "cc_fee_rate": "0.03", "default_insurance_amount":
+        null, "insurance_fee_rate": "0.01", "insurance_fee_minimum": "1.00", "email":
+        "<REDACTED>", "children": []}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '601'
+      - '573'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"37fad0de2fa69ce547baa7b7ecd8f745"
+      - W/"4d7e243262cf39546f0f5363c1c1e8e0"
       expires:
       - '0'
       pragma:
@@ -45,27 +45,25 @@ interactions:
       - chunked
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 52975b54645e93e8e2cc319b00062464
+      - 44bce2de65147ef6f40a7431000ef004
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb31nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb2nuq cac2303bbb
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.050837'
+      - '0.039260'
       x-version-label:
-      - easypost-202305121849-b449e9bf47-master
+      - easypost-202309271719-1317a54bfa-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -120,20 +118,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 52975b54645e93e8e2cc319b0006246e
+      - 44bce2de65147ef6f40a7431000ef010
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb35nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb1nuq cac2303bbb
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.031562'
+      - '0.026740'
       x-version-label:
-      - easypost-202305121849-b449e9bf47-master
+      - easypost-202309271719-1317a54bfa-master
       x-xss-protection:
       - 1; mode=block
     status:
